# eventhub-api

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 5b3553763ff1_rename_paylod_to_payload.py  89e4afa55869_rename_paylod_to_payload.py  daad964f6797_create_events_table.py  rename_paylod_to_payload.py
docker/: Dockerfile
src/eventhub/: main.py
src/eventhub/api/: events.py
src/eventhub/core/: config.py  db.py  logging.py
src/eventhub/infra/: models.py
tests/: test_smoke.py
